static/common.css
/* ... */
        .article pre code {
            border:     0.091em solid #999;
            background: #EEF;
            display:    block;
            max-height: 25em;
            overflow:   auto;
            padding:    1em;
            width:      53em;
            margin:     0 auto;
        }
            .article li code {
                width:  auto;
            }
    .article sup {
        vertical-align: super;
    }
    
    .article .meta {
        margin:     0 auto;
        border-top: 0.077em dotted #BBB;
    }
        .article .meta .navigation {
            margin:     0.5em auto 1em;
            overflow:   hidden;
            padding:    0;
            width:      auto;
        }
            .article .meta .navigation li {
                list-style: none;
                padding:    0;
                width:      45%;
            }
            .article .meta .older {
                float:  left;
            }
            .article .meta .newer {
                float:      right;
                text-align: right;
            }
        .article .meta .published {
            font-style:     italic;
            font-weight:    bold;
        }
        .article .meta p {
            clear:  both;
            width:  auto;
            margin: 1em 11em;
        }
    
    .article blockquote {
        font-style: italic;
        margin:     0 auto;
        width:      35.875em;
    }
    .article blockquote p {
        font-size:  1em;
        font-style: italic;
        width:      35.875em;
    }
    /*****************************************************************************
     *  Images in articles
     */
        .article .sidebar {
            float:  right;
            width:  auto;
            margin: 0 0 0 15px;
        }
/*****************************************************************************
 *  AdHoc
 */
        /*  Nothing yet, but I'm sure I'll need this at some point. */

/*****************************************************************************
 *  Archive/Tag Pages
 */
    div.archive h2+p {
        width:      33.286em;
        padding:    1em;
        margin:     1em auto;
        border:     1px solid #999;
        background: #EEE;
    }
    div.archive ol {
        width:          43.286em;
        font:           1.077em/1.5 Georgia,Palatino,'Palatino Linotype',Times,'Times New Roman',serif;
        text-align:     justify;
        margin:         1em auto;
    }
        .archive ol li {
            margin:     0 0 1.5em 0;
            clear:      both;
            overflow:   visible;
        }
.archive ol li:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
} 
            .archive ol li a:first-child {
                float:          left;
                margin-bottom:  0.25em;
                margin-left:    -20px;
                font:           1.143em/1.25 Georgia,Palatino,'Palatino Linotype',Times,'Times New Roman',serif;
                font-variant:   small-caps;
                text-transform: capitalize;
                text-align:     left;
                width:          490px;
            }
            .archive ol li.internal a:first-child {
                font-size:      1.5em;
            }
            .archive ol li.external a:first-child {
                padding-left:   20px;
                background:     url(http://www.google.com/s2/favicons?domain=delicious.com) top left no-repeat;
            }
        .archive .meta {
            float:          right;
            text-align:     right;
            font-style:     italic;
            color:          #666;
            font-size:      0.786em;
        }
    .archive ol li.flickr {
        position:   relative;
        overflow:   hidden;
        min-height: 67px;
    }
        .archive ol li.flickr img {
            width:      63px;
            border:     1px solid #333;
            margin:     0pt 1em 1em 0pt;
            padding:    1px;
            position:   absolute;
            top:        0;
            left:       0;
        }
        .archive ol li.flickr p, .archive ol li.flickr a {
            margin-left:    77px;
        }
        .archive ol li.flickr a {
            width:  400px;
        }

/*****************************************************************************
 *  TAG CLOUD
 */
    .tag-cloud ol li {
        display:    inline;
    }
        .tag-cloud ol li a {
            padding:    0 0.5em;
        }
    .tag-cloud .not-popular     { font-size: 1em; }
    .tag-cloud .popular         { font-size: 1.5em; }
    .tag-cloud .very-popular    { font-size: 2em; }
    .tag-cloud .ultra-popular   { font-size: 2.5em; }

/*****************************************************************************
 *  FOOTER
 */
      .footer {
          background:   #000;
          padding:      0.5em 0 0;
          overflow:     hidden;
          border-top:   1px solid #999;
      }
        .footer p.bio {
            border:     0;
            color:      #FFF;
            font:       1.231em/1.35 Baskerville,Times,'Times New Roman',serif;
            margin:     0 auto 0.25em;
            padding:    0 0 0 23.5em;
            width:      24em;
        }
        .footer p.license, .footer address {
            margin:         0 auto 0.25em;
            width:          24em;
            padding-left:   23.5em;
            text-align:     justify;
            color:          #EEE;
            font:           1.231em/1.35 Baskerville,Times,'Times New Roman',serif;
            overflow:       auto;
        }
        .footer p a, .footer address a {
            color:              #CCC;
            text-decoration:    underline;
        }
            .footer p + address {
                text-align: right;
            }

